// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Правильно рисует компонент VinHistoryScore: компактный вид 1`] = `
<div
  className="VinHistoryScore"
>
  <div
    className="VinHistoryScore__compact"
  >
    <div
      className="VinHistoryScore__title"
    >
      Полезная история?
    </div>
    <div
      className="VinHistoryScore__buttons"
    >
      <div
        className="VinHistoryScore__scoreButton"
        data-score="NEGATIVE"
        onClick={[Function]}
      >
        <IconSvg
          className="VinHistoryScore__iconButton"
          id="svgID"
          size="24"
        />
        <IconSvg
          className="VinHistoryScore__iconShadow"
          id="svgID"
          size="24"
        />
        <div
          className="VinHistoryScore__scoreText"
        >
          Нет
        </div>
      </div>
      <div
        className="VinHistoryScore__scoreButton"
        data-score="NEUTRAL"
        onClick={[Function]}
      >
        <IconSvg
          className="VinHistoryScore__iconButton"
          id="svgID"
          size="24"
        />
        <IconSvg
          className="VinHistoryScore__iconShadow"
          id="svgID"
          size="24"
        />
        <div
          className="VinHistoryScore__scoreText"
        >
          Так себе
        </div>
      </div>
      <div
        className="VinHistoryScore__scoreButton"
        data-score="POSITIVE"
        onClick={[Function]}
      >
        <IconSvg
          className="VinHistoryScore__iconButton"
          id="svgID"
          size="24"
        />
        <IconSvg
          className="VinHistoryScore__iconShadow"
          id="svgID"
          size="24"
        />
        <div
          className="VinHistoryScore__scoreText"
        >
          Да
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Правильно рисует компонент VinHistoryScore: расширенный вид 1`] = `
<div
  className="VinHistoryScore"
>
  <div
    className="VinHistoryScore__compact VinHistoryScore__compact_active"
  >
    <div
      className="VinHistoryScore__title"
    >
      Полезная история?
    </div>
    <div
      className="VinHistoryScore__buttons"
    >
      <div
        className="VinHistoryScore__scoreButton VinHistoryScore__scoreButton_active"
        data-score="NEGATIVE"
        onClick={[Function]}
      >
        <IconSvg
          className="VinHistoryScore__iconButton"
          id="svgID"
          size="24"
        />
        <IconSvg
          className="VinHistoryScore__iconShadow"
          id="svgID"
          size="24"
        />
        <div
          className="VinHistoryScore__scoreText"
        >
          Нет
        </div>
      </div>
      <div
        className="VinHistoryScore__scoreButton"
        data-score="NEUTRAL"
        onClick={[Function]}
      >
        <IconSvg
          className="VinHistoryScore__iconButton"
          id="svgID"
          size="24"
        />
        <IconSvg
          className="VinHistoryScore__iconShadow"
          id="svgID"
          size="24"
        />
        <div
          className="VinHistoryScore__scoreText"
        >
          Так себе
        </div>
      </div>
      <div
        className="VinHistoryScore__scoreButton"
        data-score="POSITIVE"
        onClick={[Function]}
      >
        <IconSvg
          className="VinHistoryScore__iconButton"
          id="svgID"
          size="24"
        />
        <IconSvg
          className="VinHistoryScore__iconShadow"
          id="svgID"
          size="24"
        />
        <div
          className="VinHistoryScore__scoreText"
        >
          Да
        </div>
      </div>
    </div>
  </div>
  <div
    className="VinHistoryScore__extended"
  >
    <div
      className="VinHistoryScore__title VinHistoryScore__title_h4"
    >
      Расскажите почему
    </div>
    <TextArea
      autoResize={true}
      className="VinHistoryScore__comment"
      color="blue"
      maxLength={1000}
      onChange={[Function]}
      placeholderShowWithValue={true}
      radius="r8"
      rows={1}
      size="l"
      value=""
    />
    <div
      className="VinHistoryScore__sendButton"
    >
      <Button
        color="blue"
        disabled={false}
        onClick={[Function]}
        size="m"
        type="button"
        width="full"
      >
        Отправить
      </Button>
    </div>
  </div>
</div>
`;

exports[`Правильно рисует компонент VinHistoryScore: расширенный вид c текстами про возврат денег 1`] = `
<div
  className="VinHistoryScore"
>
  <div
    className="VinHistoryScore__compact VinHistoryScore__compact_active"
  >
    <div
      className="VinHistoryScore__title"
    >
      Test title
    </div>
    <div
      className="VinHistoryScore__subtitle"
    >
      Test subtitle text.
    </div>
    <div
      className="VinHistoryScore__buttons"
    >
      <div
        className="VinHistoryScore__scoreButton VinHistoryScore__scoreButton_active"
        data-score="NEGATIVE"
        onClick={[Function]}
      >
        <IconSvg
          className="VinHistoryScore__iconButton"
          id="svgID"
          size="24"
        />
        <IconSvg
          className="VinHistoryScore__iconShadow"
          id="svgID"
          size="24"
        />
        <div
          className="VinHistoryScore__scoreText"
        >
          Нет
        </div>
      </div>
      <div
        className="VinHistoryScore__scoreButton"
        data-score="NEUTRAL"
        onClick={[Function]}
      >
        <IconSvg
          className="VinHistoryScore__iconButton"
          id="svgID"
          size="24"
        />
        <IconSvg
          className="VinHistoryScore__iconShadow"
          id="svgID"
          size="24"
        />
        <div
          className="VinHistoryScore__scoreText"
        >
          Так себе
        </div>
      </div>
      <div
        className="VinHistoryScore__scoreButton"
        data-score="POSITIVE"
        onClick={[Function]}
      >
        <IconSvg
          className="VinHistoryScore__iconButton"
          id="svgID"
          size="24"
        />
        <IconSvg
          className="VinHistoryScore__iconShadow"
          id="svgID"
          size="24"
        />
        <div
          className="VinHistoryScore__scoreText"
        >
          Да
        </div>
      </div>
    </div>
  </div>
  <div
    className="VinHistoryScore__extended"
  >
    <div
      className="VinHistoryScore__title VinHistoryScore__title_h4"
    >
      Расскажите почему
    </div>
    <TextArea
      autoResize={true}
      className="VinHistoryScore__comment"
      color="blue"
      maxLength={1000}
      onChange={[Function]}
      placeholderShowWithValue={true}
      radius="r8"
      rows={1}
      size="l"
      value=""
    />
    <div
      className="VinHistoryScore__moneyBack"
    >
      <Checkbox
        checked={false}
        className="VinHistoryScore__moneyBackCheck"
        id="VinHistoryScore_moneyBackCheckbox"
        name="moneyBack"
        onCheck={[Function]}
        size="l"
        theme="islands"
        type="checkbox"
      />
      <label
        className="VinHistoryScore__moneyBackText"
        htmlFor="VinHistoryScore_moneyBackCheckbox"
      >
        Верните мои деньги
      </label>
    </div>
    <div
      className="VinHistoryScore__sendButton"
    >
      <Button
        color="blue"
        disabled={false}
        onClick={[Function]}
        size="m"
        type="button"
        width="full"
      >
        Отправить
      </Button>
    </div>
  </div>
</div>
`;

exports[`Правильно рисует компонент VinHistoryScore: финальный вид (отзыв отправлен) 1`] = `
<div
  className="VinHistoryScore__success"
>
  <div
    className="VinHistoryScore__title"
  >
    Спасибо, что нашли минутку!
  </div>
</div>
`;

exports[`Правильно рисует компонент VinHistoryScore: финальный вид (отзыв отправлен) c текстом про возврат денег 1`] = `
<div
  className="VinHistoryScore__success"
>
  <div
    className="VinHistoryScore__title"
  >
    Спасибо, что нашли минутку!
  </div>
  <div
    className="VinHistoryScore__disclaimer"
  >
    Test disclaimer text.
  </div>
</div>
`;
